  - use /dev/input/event* on Raspberry Pi and Cubieboard (#3179)
  - support mouse wheel on Raspberry Pi and Cubieboard
  - scale touchscreen coordinates to screen size
* Android
  - fix IOIO connection on Android 4.x (#2959, #3260)
* Kobo
  - add UI allowing the start of external scripts to KoboMenu (#3194)
  - support Wifi with WEP (#3138)
  - support USB-OTG

Version 6.7.6 - not yet released
* devices
  - LX: relax download timeout (#3199)

Version 6.7.5 - 2014/06/09
* fix crash in task manager (#3305)
* work around crash on Windows (PC) (#3284)
* devices
  - fixed attitude data handling
  - properly detect LXNAV Nano 3
  - FLARM: fix declaration with asterisk in task point name (#3323)
* airspace
  - assume all airspaces are active if day of week is not known
  - restore "Repetitive Sound" setting on startup (#3308)
* Android
  - fix crash when opening IOIO port (#3309)
  - allow reconnecting IOIO sensors
* tasks
  - fix loading of some tasks from .cup files

Version 6.7.4 - 2014/04/11
* map
  - fix topography rendering for polygon shapes (#3245)
  - fix SDL clipped polygon rendering algorithm (#3250)
* devices
  - Westerboer: ignore implausible values from buggy devices
* logger
  - create "logs" directory automatically for external flight downloads
* user interface
  - show status message when switching to next turnpoint (#3270)
* airspace
  - relax parsing of TNP airspace files (#3272)
* infoboxes
  - don't use depreciated content in default configuration (#3278)

Version 6.7.3 - 2014/01/22
* tracking
  - changed host for DHV tracking server (#3208)
* user interface
  - fix missing battery info in status panels
* map
  - fix disappearing observation zones at left/top screen border (#3212)
  - fix RASP display
* devices
  - LX: improved logger handshake (#3199)
  - LX: auto-retry after errors during IGC download
* Android
  - load XCSoarData from external SD card if available (#3198)
* Kobo
  - fix touch screen bug (#3195, #3204, #3211)
